<package>
  <description brief="Test thing">
    This package is a Lisp client library for ROS, the Robot Operating
    System.
  </description>
 
 
<buildtool_depend>catkin</buildtool_depend>
<build_depend>message_generation</build_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>


</package>

