<package>
  <name>rospytesting</name>
    <version>0.0.1</version>
  <description>
    This package is a testing library for ROS, the Robot Operating
    System.
  </description>
  
    <author>Greg</author>
   <license>BSD</license>
    <maintainer email="gbrill@debrill.co">Greg B</maintainer>
 
 
<buildtool_depend>catkin</buildtool_depend>
<build_depend>message_generation</build_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
    <architecture_independent/>
  </export>

</package>

